bug 515415 - [WinCE] Software Update not being applied, path from wgetcwd doesn't always end with a slash r=dougt